# graphite

./: .gitignore  CMakeLists.txt  Graphite.sln  README.md  Stem.sln  argument.go  declarations.go  go.mod  go.sum  interfaces.go  invocation.go  method.go  method_invocation.go  program.go  statements.go  type.go  types.go  values.go  visitor.go
Demo/: Demo.csproj  HelloWorld.cs  Program.cs
Graphite/: Argument.cs  Block.cs  Declarations.cs  IStatement.cs  Library.cs  Method.cs  MethodInvocation.cs  Module.cs  Parameter.cs  PrimitiveTypes.cs  Program.cs  StringLiteral.cs  SyntaxGraph.cs  Types.cs  Values.cs
Graphite.Core/: Declarations.fs  File1.fs  Graphite.Core.fsproj  Library.fs
Graphite.Demo/: Graphite.Demo.fsproj  Program.fs
Graphite.HumanReadable/: Graphite.HumanReadable.fsproj  Library.fs
Graphite.Serialization.HumanReadable/: Graphite.Serialization.HumanReadable.csproj  HumanReadableSerializer.cs  SourceCodeSerializeException.cs
Stem/: Argument.cs  Block.cs  Library.cs  Method.cs  MethodInvocation.cs  Module.cs  Parameter.cs  PrimitiveTypes.cs  StringLiteral.cs  SyntaxGraph.cs
Stem.Demo/: Program.cs  Stem.Demo.csproj
demo/: CMakeLists.txt  demo.cpp  hello_world.go  main.go
demo_serializer/: renderer.go
find/: find.go  sugar.go  visitor.go
graphite/: CMakeLists.txt  declarations.h  graphite.cpp  graphite.h  method_invocation.h  program.h  types.cpp  types.h  values.h
impl/: argument.go  external_library.go  external_method.go  external_module.go  interfaces_test.go  internal_method.go  invocation.go  module.go  parameter.go  program.go  (+1 more)
(+56 files in other folders)
